<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dip"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_title1"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_title2"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dip"
            android:src="@mipmap/dummy_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="6"
        android:orientation="horizontal">

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="top|right"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tips_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/login_tips"
                android:paddingBottom="3dp"
                android:visibility="gone"
                android:textColor="@color/white" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_layout_bg"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:padding="5dp"
                        android:src="@mipmap/log_in_user_photo"
                         />

                    <EditText
                        android:id="@+id/ET_lg_number"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/login_number_hint"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <ImageView
                    android:id="@+id/ET_scan_number"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@mipmap/scan_code" />
                    <ImageView
                        android:id="@+id/ET_help"
                        android:layout_marginLeft="5dp"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@mipmap/login_help" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/app_background_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:padding="5dp"
                        android:src="@mipmap/lock"
                        />

                    <EditText
                        android:id="@+id/ET_lg_pwd"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/login_pwd_hint"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:letterSpacing="0.2"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

            <!--
            <com.cengalabs.flatui.views.FlatButton
                android:id="@+id/BT_lg_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:padding="@dimen/btton_padding"
                android:text="@string/login"
                android:textSize="@dimen/button_text_size"
                flatui:fl_textAppearance="fl_light"
                flatui:fl_theme="@array/blood"
                android:orientation="vertical" />
                -->
            <Button
                android:id="@+id/BT_lg_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dip"
                android:padding="5dp"
                android:text="@string/login"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@drawable/default_theme_login_button_selector"
                android:orientation="vertical" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/register_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:layout_alignParentLeft="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:visibility="gone"
                    android:text="@string/register_a_new_account"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/how_get_pwd_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:layout_alignParentRight="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:visibility="visible"
                    android:text="@string/how_get_pwd"
                    android:textColor="@color/white" />

            </RelativeLayout>


            <ImageView
                android:id="@+id/loading_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/login_tips"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>